# Qality_tool

./: .gitignore  pyproject.toml
.claude/: settings.local.json
docs/: CLAUDE.md  architecture.md  cuda_backend_spec.md  current_iteration.md  gui_spec.md  metric_spec_correlation.md  metric_spec_envelope.md  metric_spec_noise.md  metric_spec_phase.md  metric_spec_regulary.md  metric_spec_spectrum.md  performance_notes.md  product_spec.md  roadmap.md
scripts/: profile_pipeline.py
src/quality_tool/: __init__.py
tests/: test_iteration_cleanup.py  test_iteration_map_nav.py
tests/test_comparison/: test_normalization.py
tests/test_core/: test_analysis_context.py
tests/test_cuda/: test_backend.py
tests/test_envelope/: test_analytic.py  test_registry.py
tests/test_evaluation/: __init__.py  test_batch_evaluator.py  test_bundle.py  test_evaluator.py  test_evaluator_bundles.py  test_input_policy.py  test_planner.py  test_planner_needs.py  test_recipe.py  test_thresholding.py
tests/test_gui/: conftest.py  test_histogram_window.py  test_main_window.py  test_metrics_dialog.py  test_pixel_metrics_windows.py  test_processing_dialog.py  test_widgets.py
tests/test_io/: __init__.py  test_image_stack_loader.py  test_metadata_parser.py  test_real_data_integration.py  test_txt_matrix_loader.py  test_z_axis_loader.py
tests/test_metrics/: test_baseline_metrics.py  test_correlation_metrics.py  test_envelope_metrics.py  test_metric_registration.py  test_noise_metrics.py  test_phase_metrics.py  test_registry.py  test_regularity_metrics.py  test_representation_needs.py  (+1 more)
(+114 files in other folders)
